T-Block Resume Bootstrap: fixed my line height cos it looked funky on tablet mode

--- a/css/t-block-resume.css
+++ b/css/t-block-resume.css
@@ -16,6 +16,6 @@ h5 {
     font-size: 1.5rem !important;
 }
 #academic h5, #academic p {
-    line-height: 1rem;
+    line-height: 1.5rem;
 }
 
